--- a/locations.html
+++ b/locations.html
@@ -64,7 +64,7 @@
           <h1 class="storeH1">Store Locations</h1>
         </div>
 
-        <!-- <img class="videoClass" src="/img/videoplaceholder.jpg" alt="video" /> -->
+        <!-- <img class="videoClass" src="img/videoplaceholder.jpg" alt="video" /> -->
       </div>
 
       <div class="btn-container">
@@ -96,7 +96,7 @@
         </button>
       </div>
       <div class="locations-grid salina" id="salina">
-        <img src="/img/store.jpeg" alt="office picture" />
+        <img src="img/store.jpeg" alt="office picture" />
 
         <div class="office-info">
           <div>
@@ -166,7 +166,7 @@
         ></iframe>
       </div>
       <div class="locations-grid hidden" id="abilene">
-        <img src="/img/office-ab.jpg" alt="office picture" />
+        <img src="img/office-ab.jpg" alt="office picture" />
 
         <div class="office-info">
           <div>
@@ -238,7 +238,7 @@
         ></iframe>
       </div>
       <div class="locations-grid hidden" id="hutchinson">
-        <img src="/img/store.jpeg" alt="office picture" />
+        <img src="img/store.jpeg" alt="office picture" />
 
         <div class="office-info">
           <div>
@@ -310,7 +310,7 @@
         ></iframe>
       </div>
       <div class="locations-grid hidden" id="greatbend">
-        <img src="/img/office-gb.jpg" alt="office picture" />
+        <img src="img/office-gb.jpg" alt="office picture" />
 
         <div class="office-info">
           <div>
@@ -382,7 +382,7 @@
         ></iframe>
       </div>
       <div class="locations-grid hidden" id="oklahoma">
-        <img src="/img/office-ok.jpg" alt="office picture" />
+        <img src="img/office-ok.jpg" alt="office picture" />
 
         <div class="office-info">
           <div>
@@ -454,7 +454,7 @@
         ></iframe>
       </div>
       <div class="locations-grid hidden" id="minneapolis">
-        <img src="/img/office-min.jpg" alt="office picture" />
+        <img src="img/office-min.jpg" alt="office picture" />
 
         <div class="office-info">
           <div>
