--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,9 @@
           </li>
           <li><a href="services.html">Services</a></li>
           <li><a href="locations.html">Locations</a></li>
-          <li class="quote-li"><p class="call-to-quote quote-btn">Quote</p></li>
+          <li class="quote-li">
+            <p class="call-to-quote quote-btn btn-quo">Quote</p>
+          </li>
         </ul>
         <div class="social">
           <a
