--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script>
       $(document).ready(function () {
         $('.toggle-nav').click(function () {
-          $('.menu-1 ul li').slideToggle('slow');
+          $('.menu-1 ul li').slideToggle('fast');
         });
       });
     </script>
@@ -41,7 +41,9 @@
           </li>
           <li><a href="services.html">Services</a></li>
           <li><a href="locations.html">Locations</a></li>
-          <li class="quote-li"><p class="call-to-quote quote-btn">Quote</p></li>
+          <li class="quote-li">
+            <p class="call-to-quote quote-btn btn-quo">Quote</p>
+          </li>
         </ul>
         <div class="social">
           <a
@@ -68,7 +70,7 @@
         <!-- <img class="videoClass" src="/img/videoplaceholder.jpg" alt="video" /> -->
       </div>
       <h2 class="index-h2">What we offer.</h2>
-      <div class="grid-3-cols">
+      <div class="grid-4-cols">
         <div>
           <svg
             xmlns="http://www.w3.org/2000/svg"
