--- a/services.html
+++ b/services.html
@@ -41,7 +41,9 @@
           </li>
           <li><a href="services.html">Services</a></li>
           <li><a href="locations.html">Locations</a></li>
-          <li class="quote-li"><p class="call-to-quote quote-btn">Quote</p></li>
+          <li class="quote-li">
+            <p class="call-to-quote quote-btn btn-quo">Quote</p>
+          </li>
         </ul>
         <div class="social">
           <a
@@ -75,8 +77,8 @@
         <div class="services-text">
           <h2>Monuments and Memorials</h2>
           <p class="features-text ft1">
-            We offer a wide slection of stones and bronze in various shapes and
-            color options that can be designed and eatched by our professionally
+            We offer a wide selection of stones and bronze in various shapes and
+            color options that can be designed and etched by our professionally
             trained and insured team within our own facilities.
           </p>
           <button class="btnGallery">Check Out Our Gallery</button>
@@ -86,7 +88,7 @@
         <div class="services-text">
           <h2>Cremation Memorials and Columbariums</h2>
           <p class="features-text">
-            We offer a wide selection of creamtion vaults, urns, columbariums,
+            We offer a wide selection of cremation vaults, urns, columbariums,
             and mausoleums in various shapes and colors that can be designed and
             etched by our professionally trained and insured team within our own
             facilities at our main office.
