--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <!-- <img class="videoClass" src="/img/videoplaceholder.jpg" alt="video" /> -->
       </div>
       <h2 class="index-h2">What we offer.</h2>
-      <div class="grid-4-cols">
+      <div class="grid-4-cols features-mob">
         <div>
           <svg
             xmlns="http://www.w3.org/2000/svg"
