--- a/styles.html
+++ b/styles.html
@@ -68,7 +68,7 @@
         </div>
       </div>
 
-      <div class="grid-4-col">
+      <div class="grid-4-col grid-colors-col">
         <div class="granite-header">
           <h2 class="granite-h2">Granite Colors</h2>
           <p>Contact us to see more options.</p>
