--- a/styles.html
+++ b/styles.html
@@ -110,7 +110,11 @@
         <label>Email Address</label>
         <input type="email" name="email" />
         <label>Monument Details</label>
-        <textarea class="mon-details" name="details"></textarea>
+        <textarea
+          class="mon-details"
+          placeholder="What are you looking for?"
+          name="details"
+        ></textarea>
 
         <button class="btn-submit" style="float: right">Submit</button>
       </form>
