--- a/services.html
+++ b/services.html
@@ -81,7 +81,7 @@
             color options that can be designed and etched by our professionally
             trained and insured team within our own facilities.
           </p>
-          <button class="btnGallery">Check Out Our Gallery</button>
+          <a href="gallery.html" class="btn quote-btn-index">Gallery</a>
         </div>
       </div>
       <div class="grid-2-container">
