--- a/gallery.html
+++ b/gallery.html
@@ -104,7 +104,7 @@
       </div>
 
       <div class="full-img" id="fullImgBox">
-        <img src="img/marker-1.jpg" id="fullImg" />
+        <img src="img/marker-1.jpg" alt="full headstone example" id="fullImg" />
         <span onclick="closeFullImg()">X</span>
       </div>
 
@@ -115,71 +115,85 @@
         </div>
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-1.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-2.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-1.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-2.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-1.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-2.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-1.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-2.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-1.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-2.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-1.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-2.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-1.jpg"
           onclick="openFullImg(this.src)"
         />
         <img
           class="img-gallery-src"
+          alt="headstone example"
           src="img/marker-2.jpg"
           onclick="openFullImg(this.src)"
         />
