--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <source src="img/video1.mov" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
-        <img class="front-image image-video" src="img/front-image.jpg" />
+        <img class="front-image" alt="headstone" src="img/front-image.jpg" />
         <div class="quote-div">
           <h2 class="quote-ask">View our work.</h2>
           <div class="btn-class gallery-btn">
