--- a/services.html
+++ b/services.html
@@ -69,59 +69,60 @@
 
         <!-- <img class="videoClass" src="/img/videoplaceholder.jpg" alt="video" /> -->
       </div>
-
-      <div class="grid-2-container">
-        <div class="services-images">
-          <img src="img/services.jpg" alt="monument" />
+      <div class="servi-flex">
+        <div class="grid-2-container">
+          <div class="services-images">
+            <img src="img/etchings.jpg" alt="monument" />
+          </div>
+          <div class="services-text">
+            <h2>Monuments and Memorials</h2>
+            <p class="features-text ft1">
+              We offer a wide selection of stones and bronze in various shapes
+              and color options that can be designed and etched by our
+              professionally trained and insured team within our own facilities.
+            </p>
+            <a href="gallery.html" class="btn quote-btn-index">Gallery</a>
+          </div>
         </div>
-        <div class="services-text">
-          <h2>Monuments and Memorials</h2>
-          <p class="features-text ft1">
-            We offer a wide selection of stones and bronze in various shapes and
-            color options that can be designed and etched by our professionally
-            trained and insured team within our own facilities.
-          </p>
-          <a href="gallery.html" class="btn quote-btn-index">Gallery</a>
+        <div class="grid-2-container">
+          <div class="services-text">
+            <h2>Cremation Memorials and Columbariums</h2>
+            <p class="features-text">
+              We offer a wide selection of cremation vaults, urns, columbariums,
+              and mausoleums in various shapes and colors that can be designed
+              and etched by our professionally trained and insured team within
+              our own facilities at our main office.
+            </p>
+          </div>
+          <div class="services-images">
+            <img src="img/BARKER.jpg" alt="monument" />
+          </div>
         </div>
-      </div>
-      <div class="grid-2-container">
-        <div class="services-text">
-          <h2>Cremation Memorials and Columbariums</h2>
-          <p class="features-text">
-            We offer a wide selection of cremation vaults, urns, columbariums,
-            and mausoleums in various shapes and colors that can be designed and
-            etched by our professionally trained and insured team within our own
-            facilities at our main office.
-          </p>
+        <div class="grid-2-container">
+          <div class="services-images">
+            <img src="img/rembrances.jpg" alt="monument" />
+          </div>
+          <div class="services-text">
+            <h2>Other Memorials and Remembrances</h2>
+            <p class="features-text">
+              Our team of experts can help create the perfect memorial artwork
+              for any occasion. We offer a variety of additional memorial and
+              remembrance artwork perfect for your home, office, or as a gift.
+            </p>
+          </div>
         </div>
-        <div class="services-images">
-          <img src="img/cremation.jpg" alt="monument" />
-        </div>
-      </div>
-      <div class="grid-2-container">
-        <div class="services-images">
-          <img src="img/rembrances.jpg" alt="monument" />
-        </div>
-        <div class="services-text">
-          <h2>Other Memorials and Remembrances</h2>
-          <p class="features-text">
-            Our team of experts can help create the perfect memorial artwork for
-            any occasion. We offer a variety of additional memorial and
-            remembrance artwork perfect for your home, office, or as a gift.
-          </p>
-        </div>
-      </div>
-      <div class="grid-2-container">
-        <div class="services-text">
-          <h2>Monument Services and Restoration</h2>
-          <p class="features-text">
-            Our team of professionally trained and insured monument experts are
-            here to help from the design and purchase, to the repairs and
-            maintenance of your memorials, monuments, and plaques.
-          </p>
-        </div>
-        <div class="services-images">
-          <img src="img/restoration.jpg" alt="monument" />
+        <div class="grid-2-container">
+          <div class="services-text">
+            <h2>Monument Services and Restoration</h2>
+            <p class="features-text">
+              Our team of professionally trained and insured monument experts
+              are here to help from the design and purchase, to the repairs and
+              maintenance of your memorials, monuments, and plaques.
+            </p>
+          </div>
+          <div class="services-images">
+            <img src="img/restoration.jpg" alt="monument" />
+          </div>
         </div>
       </div>
     </div>
