--- a/styles.html
+++ b/styles.html
@@ -69,7 +69,11 @@
       </div>
 
       <div class="full-img" id="fullImgBox">
-        <img src="img/marker-1.jpg" id="fullImg" />
+        <img
+          src="img/marker-1.jpg"
+          alt="full image of granite color"
+          id="fullImg"
+        />
         <span onclick="closeFullImg()">X</span>
       </div>
       <div class="grid-4-col grid-colors-col">
